--- a/.github/workflows/cloud-run.yaml
+++ b/.github/workflows/cloud-run.yaml
@@ -22,18 +22,13 @@ jobs:
       - name: Configure docker for GCP
         run: gcloud auth configure-docker
 
-    #   - name: Build and push Docker image
-    #     uses: docker/build-push-action@v2
-    #     with:
-    #       context: app/
-    #       push: true
-    #       tags: us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/dev/python-app:latest
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v2
+        with:
+          context: app/
+          push: true
+          tags: us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/dev/python-app:latest
         
-      - name: Docker Build and Push to DockerHub
-        run: |
-            ls
-            docker build -t us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/dev/python-app:latest ./app
-            docker push us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/dev/python-app:latest
       - name: Deploy to Cloud Run
         uses: google-github-actions/deploy-cloudrun@v1
         with:
