feat: :heavy_plus_sign: Add workflow_dispatch

--- a/.github/workflows/cloud-run.yaml
+++ b/.github/workflows/cloud-run.yaml
@@ -1,9 +1,10 @@
 name: "Google Cloud Run"
 
-on:
-  push:
-    branches:
-      - master
+# on:
+#   push:
+#     branches:
+#       - master
+on: workflow_dispatch
 
 jobs:
   deploy:
