--- a/.github/workflows/cloud-run.yaml
+++ b/.github/workflows/cloud-run.yaml
@@ -1,10 +1,10 @@
 name: "Google Cloud Run"
 
-# on:
-#   push:
-#     branches:
-#       - master
-on: workflow_dispatch
+on:
+  push:
+    branches:
+      - master
+# on: workflow_dispatch
 
 jobs:
   deploy:
